<resources>
    <string name="app_name">CalMateMVVM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">WELCOME</string>
    <string name="join_msg">Join Us Today for a Healthier You</string>
    <string name="str_calmate_info">Discover the seamless way to manage your physical and mental well-being with CalMate.</string>
    <string name="get_started">Get Started</string>
    <string name="txt_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="txt_username">Email</string>
    <string name="txt_password">Password</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="accept">Accept</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="sign_up">Sign Up</string>
    <string name="remember_me">Remember me</string>
    // Register
    <string name="invalid_username">Invalid Email</string>
    <string name="invalid_full_name">Invalid Name</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="not_matched_password">Passwords do not match</string>
    <string name="how_are_you_today">How are you today?</string>
    <string name="add_a_goal">Add a goal</string>
    <string name="set_a_goal_based_on_how_active_you_are">Set a goal based on how active you are...</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="today">Today</string>
    <string name="steps_taken">Steps Taken</string>
    <string name="steps">Steps</string>
    <string name="_0">0</string>
    <string name="set_a_goal">Set a Goal</string>
    <string name="how_are_you_feeling_right_now">How are you feeling right now?</string>
    <string name="medications">Medications</string>
    <string name="daily_step">Daily Step</string>
    <string name="meditation">Meditation</string>
    <string name="positive">Positive</string>
    <string name="previous">previous</string>
    <string name="play">play</string>
    <string name="next">next</string>
    <string name="_00_00">00:00</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="your_daily_move_goal">Your Daily Move Goal</string>
    <string name="set_a_goal_based_on_how_active_you_are_or_how_active_you_d_like_to_be_each_day">Set a goal based on how active you are, or how active you\'d like to be, each day.</string>
    <string name="decrease">Decrease</string>
    <string name="increase">Increase</string>
    <string name="_250">250</string>
    <string name="change_move_goal">Change Move Goal</string>
    <string name="recommended_meditations">Recommended Meditations</string>
    <string name="view_all">View All</string>
    <string name="good_morning">Good morning,</string>
    <string name="neslihan">Neslihan</string>
    <string name="add_reminder">Add reminder</string>
    <string name="add_reminders_nto_remember_your_medicines">Add Reminders \nto Remember Your Medicines</string>
    <string name="morning_meditation">Morning Meditation</string>
    <string name="_5_min">5 min</string>
    <string name="start">Start</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="meditate">Meditate</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="you_made_it">You made it!. Congratulations.</string>
</resources>