<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.example.calmatemvvm.ui.setgoal.SetGoalViewModel" />
    </data>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.setgoal.SetGoalFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvStepGoal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_daily_move_goal"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvStepGoalDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/set_a_goal_based_on_how_active_you_are_or_how_active_you_d_like_to_be_each_day"
                android:textAlignment="center"
                android:textAppearance="?android:textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="150dp"
                android:gravity="center_horizontal|center_vertical">

                <ImageButton
                    android:id="@+id/btnDecrease"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/decrease"
                    android:src="@drawable/ic_remove" />

                <TextView
                    android:id="@+id/tvStepCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:gravity="center"
                    android:text="@string/_250"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textSize="70sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/btnIncrease"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/increase"
                    android:src="@drawable/ic_add" />
            </LinearLayout>

            <Button
                android:id="@+id/btnChangeGoal"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="150dp"
                android:text="@string/change_move_goal" />

        </LinearLayout>

    </FrameLayout>
</layout>