<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_light"
    android:orientation="vertical"
    tools:context=".ui.welcome.WelcomeFragment">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:scaleType="centerCrop"
        android:src="@drawable/confetti"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/purple_app"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@id/image_view"
        app:layout_constraintEnd_toEndOf="@id/image_view"
        app:layout_constraintStart_toStartOf="@id/image_view" />

    <TextView
        android:id="@+id/text_join_msg"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/join_msg"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_view" />

    <TextView
        android:id="@+id/text_join_msg2"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:text="@string/str_calmate_info"
        android:textSize="16sp"
        android:maxLines="3"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/text_join_msg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/get_started_button"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:textSize="17sp"
        android:text="@string/get_started"
        android:background="@drawable/rounded_button"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@id/text_join_msg2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/text_welcome2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="20dp"
        android:maxLines="3"
        android:text="@string/txt_account"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/get_started_button" />

    <TextView
        android:id="@+id/text_signIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sign_in"
        android:textSize="16sp"
        android:layout_marginStart="5dp"
        android:textColor="@color/purple_app"
        android:textStyle="bold"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/text_welcome2"
        app:layout_constraintTop_toBottomOf="@id/get_started_button" />

</androidx.constraintlayout.widget.ConstraintLayout>