<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:gravity="center"
android:background="@color/purple_app"
tools:context=".ui.login.LoginFragment">

<androidx.cardview.widget.CardView
    android:layout_width="340dp"
    android:layout_height="wrap_content"
    android:layout_margin="30dp"
    app:cardCornerRadius="30dp"
    app:cardElevation="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:padding="24dp"
        android:background="@drawable/custom_edittext">

        <TextView
            android:id="@+id/loginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="34sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/purple_app"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/custom_edittext"
            android:layout_marginTop="20dp"
            android:padding="8dp"
            android:paddingStart="20dp"
            android:hint="@string/txt_username"
            android:textColor="@color/black"
            android:drawablePadding="8dp"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/custom_edittext"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            android:padding="8dp"
            android:paddingStart="20dp"
            android:hint="@string/txt_password"
            android:textColor="@color/black"
            android:drawablePadding="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/rememberMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_me"
                />
        </LinearLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/login"
            android:textSize="18sp"
            android:backgroundTint="@color/purple_app"
            app:cornerRadius = "20dp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>
</LinearLayout>